# Portfolio-2-0

./: .gitignore  README.md
TODO/: Portfolio Agent.txt
backend/: README.md  profile.json  pyproject.toml  render.yaml  requirements.txt
backend/app/: agent.py  main.py  tools.py
backend/app/mcp/: server.py
backend/app/routes/: chat.py  generate.py
backend/app/scripts/: indexer.py
backend/app/services/: chat_service.py  image_service.py  llm.py  retrieval.py
portfolio/: package-lock.json  package.json  tailwind.config.ts  vercel.json
portfolio/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
portfolio/src/app/about/: page.tsx
portfolio/src/app/agent-design/: page.tsx
portfolio/src/app/api/contact/: route.ts
portfolio/src/app/api/generate/: route.ts
portfolio/src/app/blog/: page.tsx
portfolio/src/app/blog/[slug]/: page.tsx
portfolio/src/app/contact/: page.tsx
portfolio/src/app/projects/: page.tsx
portfolio/src/components/: AnimatedSection.tsx  Button.tsx  CustomCursor.tsx  Footer.tsx  KeepAlive.tsx  Navbar.tsx  ProjectCard.tsx  ScrollProgress.tsx
portfolio/src/components/agent/: AgentDesignCanvas.tsx  PortfolioChatWidget.tsx
portfolio/src/components/home/: BottomProjectsGrid.tsx  CTAStripe.tsx  FeaturedProject.tsx  FeaturedWorksGrid.tsx  HeroSection.tsx  PortfolioSpotlight.tsx
